--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-admin.page=https://www.souzcvettorg.ru/bitrix/admin
+admin.page=
 browser=chrome
-admin.login=ochubrik
-admin.pass=2kYVL6QVxkOzGLd~
+admin.login=
+admin.pass=
 
-ya.org.url=https://yandex.ru/sprav/chain/7115973/branches
-ya.login=ochubrik.sct
-ya.pass=sct180387
+ya.org.url=
+ya.login=
+ya.pass=
